deploy/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: masters-pool
  labels:
    app.kubernetes.io/name: masters-pool
