deploy/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: masters-pool
  labels:
    app.kubernetes.io/name: masters-pool
spec:
  selector:
    app.kubernetes.io/name: masters-pool
  ports:
    - name: http
      port: 80
      targetPort: 80
